--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-11-16 14:15:32 -0600 
+%% Created for Evan Bollig at 2013-11-17 08:26:04 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{LiSaad2010,
+	Author = {Li, R. and Saad, Y.},
+	Date-Added = {2013-11-17 14:25:53 +0000},
+	Date-Modified = {2013-11-17 14:26:04 +0000},
+	Institution = {Technical report, University of Minnesota},
+	Title = {Gpu-accelerated preconditioned iterative linear solvers},
+	Year = {2010}}
 
 @misc{M2070FactSheet,
 	Date-Added = {2013-11-16 20:14:36 +0000},
